# Trustless-Work-Test

./: Cargo.toml  README.md
contracts/freelancer/: Cargo.toml
contracts/freelancer/src/: admin.rs  allowance.rs  balance.rs  contract.rs  events.rs  lib.rs  metadata.rs  storage.rs  storage_types.rs  test.rs  token.rs
contracts/freelancer/test_snapshots/test/: test_add_new_objectives_and_complete_them.1.json  test_client_can_recover_funds_if_freelancer_does_not_complete_all_objectives.1.json  test_complete_project_after_all_objectives_completed.1.json  test_create_fund_complete_objectives.1.json  test_get_projects_by_client.1.json  test_get_projects_by_freelancer.1.json
